[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/raleway48.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/raleway32.tres" type="DynamicFont" id=2]
[ext_resource path="res://Level.gd" type="Script" id=3]
[ext_resource path="res://assets/Video-Game-Power-Level-Up-B1-www.fesliyanstudios.com (1).wav" type="AudioStream" id=4]
[ext_resource path="res://assets/Door-Bell-Ding-A1-www.fesliyanstudios.com.wav" type="AudioStream" id=5]

[node name="DesertLevel" type="CanvasLayer"]
script = ExtResource( 3 )
level_name = "desert"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 500.0
margin_bottom = 500.0
rect_min_size = Vector2( 2000, 2000 )
color = Color( 0.94902, 0.87451, 0.380392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = -97.0
margin_right = 170.0
margin_bottom = -39.0
custom_fonts/font = ExtResource( 1 )
text = "Desert Level"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeSceneButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -22.5
margin_right = 115.0
margin_bottom = 22.5
custom_fonts/font = ExtResource( 2 )
disabled = true
text = "Change Scene"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -155.257
margin_top = 75.2698
margin_right = 158.743
margin_bottom = 133.27
custom_fonts/font = ExtResource( 1 )
text = "Clicks: 0"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = 151.5
margin_right = 115.0
margin_bottom = 196.5
custom_fonts/font = ExtResource( 2 )
text = "Click Me!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonClickedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="LevelLoadedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="ChangeSceneButton" to="." method="_on_ChangeSceneButton_pressed"]
[connection signal="pressed" from="ClickButton" to="." method="_on_ClickButton_pressed"]
